    * FIX: /home was not writable on US and KR 2010 BCM models
    * FIX: netcast_config_regenerator.sh should use all country groups now for 'enable_all' option
    * FIX: support for Yahoo Widgets Engine running from other usb ports and other partitions
    * FIX: new Internet Browser page by nicola_12345 + his JavaScript code in proxy fixes for frames switching and other button bindings
    * ADD: experimental support for SmartTV models
    * ADD: build and installation scripts can now handle 2011 BCM model images
    * ADD: support for KR 2010 BCM models
    * ADD: /scripts/readspeedtest.sh script from mmm4m5m for read transfer rate measurement (thanks lprot for measurement hint)
    * ADD: storing rootfs and lginit backups at installation into /home/backup/{rootfs,lginit}.bck files
    * ADD: web proxy script for JavaScript code injection to improve Internet Browser - settings for start at boot (disabled by default)
    * ADD: get_RELEASE_info.sh script for getting LG firmware version
    * ADD: NetCast links icons preloading at boot - much quicker links.html page load time
    * ADD: mtdinfo.sh script for getting info about mtd partitions by mmm4m5m
    * ADD: yavido service alternate player (prototype for now)
    * ADD: rc.fwinfo to get info about TV model and LG firmware logged at boot
    * ADD: nvram-edit commandline tool to get info from NVRAM dump and change some locked values
    * ADD: libncurses.so.5.7 and recompiled top binary to use the lib
    * ADD: lua, luac, liblua.so.5.1.4
    * ADD: libSDL-1.2.so.0.11.3 with DirectFB access for additional SDL apps that can now use TV screen
    * ADD: OPENRELEASE 2.1.0 by rtokarev
    * ADD: CGI web page for remote control by mihaifireball under http://ip_of_tv/remote/
    * ADD: possibility to remove all OpenLGTV BCM configs or just NetCast configs for recreating defaults at next boot using WebUI