@@ -1,5 +1,5 @@
 
-         Welcome to OpenLGTV BCM ver. 0.5.0-devel
+         Welcome to OpenLGTV BCM ver. 0.5.0-alpha3
                   http://openlgtv.org.ru/
 
     After first login change root password for yours TV!
