@@ -82,13 +82,13 @@ then
     #v- not used as killing browser should be done in konfabulator.sh
     #if [ "$netcast_kill_browser" = "1" ]
     #then
-    #	if [ -f "$real_run3556" ]
-    #	then
-    #	    echo "OpenLGTV_BCM-INFO: running NetCast Config Regenerator for killing old browser instance in browser startup script (netcast_kill_browser=1) run3556 file: $real_run3556 ..."
-    #	    /scripts/netcast_config_regenerator.sh $real_run3556 kill_browser
-    #	else
-    #	    echo "OpenLGTV_BCM-WARN: havent found any useful run3556 file, skipping custom NetCast Web Browser start script modification..."
-    #	fi
+    	if [ -f "$real_run3556" ]
+    	then
+    	    echo "OpenLGTV_BCM-INFO: running NetCast Config Regenerator for killing old browser instance in browser startup script (netcast_kill_browser=1) run3556 file: $real_run3556 ..."
+    	    /scripts/netcast_config_regenerator.sh run3556=$real_run3556 kill_browser
+    	else
+    	    echo "OpenLGTV_BCM-WARN: havent found any useful run3556 file, skipping custom NetCast Web Browser start script modification..."
+    	fi
     #fi
 else
     echo "OpenLGTV_BCM-ERROR: havent found any useful config.xml file, skipping custom NetCast configuration..."
@@ -97,7 +97,7 @@ fi
 if [ "$netcast_webproxy" = "1" ]
 then
     echo "OpenLGTV_BCM-INFO: running NetCast Config Regenerator for proxy setup (netcast_webproxy=1) run3556 file: $real_run3556 extra_conf file: $real_extra_conf proxy_config.txt file: $proxy_config_proxy..."
-    /scripts/netcast_config_regenerator.sh set_proxy run3556=$real_run3556 extra_conf=$real_extra_conf proxy_config_txt=$proxy_config_proxy
+    /scripts/netcast_config_regenerator.sh set_proxy kill_browser run3556=$real_run3556 extra_conf=$real_extra_conf proxy_config_txt=$proxy_config_proxy
     echo "OpenLGTV_BCM-INFO: running proxy in background ..."
     /scripts/proxy-start.sh &
 else
